# payment-svc

./: .env.example  Cargo.toml  README.md  TODO.md  package.json  types.d.ts
.github/: copilot-instructions.md
src/: index.ts  lib.rs  main.rs  seeds.ts  worker.ts
src/commons/: dto.ts  mod.rs  structs.rs
src/commons/dto/: http.dto.ts
src/commons/interfaces/: interface.types.ts
src/commons/models/: productPromotion.model.ts
src/commons/utils/: db.utils.ts  errors.utils.ts
src/config/: db.rs  env.rs  env.ts  mod.rs
src/core/: db.ts  logger.ts  redis.ts  stripe.ts
src/features/: mod.rs
src/features/products/: mod.rs  product_models.rs  product_repo.rs  product_svc.rs  products_repo.rs  products_svc.rs
src/features/promotions/: mod.rs  promotions_models.rs  promotions_repo.rs  promotions_svc.rs
src/http/: docs.rs  health.rs  mod.rs
src/http/v1/: mod.rs  products.rs  promotions.rs
src/middlewares/: auth_middleware.rs  mod.rs
src/models/: mod.rs  products.rs
src/modules/products/: dto.ts  model.ts  repository.ts  router.ts  schema.ts  service.ts
src/modules/promotions/: job.ts  model.ts  repository.ts  router.ts  schema.ts  service.ts
src/modules/transactions/: model.ts  repository.ts  router.ts  schema.ts  service.ts
src/plugins/: errorHandler.ts  requestId.ts  requestLogger.ts
src/repositories/: products_repo.rs
src/seeders/: index.ts  init-products-seed.ts
src/seeders/products/: init.ts
src/seeds/: mod.rs  product_seeds.rs
src/services/: mod.rs  products_svc.rs
src/services/products/: repository.rs  (+1 more)
src/utils/: requestId.ts
