[package]
name = "nkpay"
version = "0.1.0"
edition = "2024"
default-run = "nkpay"

[dependencies]
actix-web = "4.12.1"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
mongodb = "3.4.1"
futures-util = "0.3.31"
thiserror = "2.0.17"
log = "0.4.29"
env_logger = "0.11.8"
dotenvy = "0.15.7"
